force-app/main/default/objects/Future_Allocation__c/Future_Allocation__c.object-meta.xml
<CustomObject>
    <description>A scheduled allocation for a particular opportunity</description>
    <label>Future Allocation</label>
    <nameField>
        <displayFormat>F-ALL-{00000}</displayFormat>
        <label>Future Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Future Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>