force-app/main/default/objects/Future_Allocation__c/fields/Future_Allocation_Set__c.field-meta.xml
<CustomField>
    <fullName>Future_Allocation_Set__c</fullName>
    <label>Future Allocation Set</label>
    <referenceTo>Future_Allocation_Set__c</referenceTo>
    <relationshipLabel>Future Allocations</relationshipLabel>
    <relationshipName>Future_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>