force-app/main/default/objects/Future_Allocation__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <description>Percent of opportunity amount to allocate to this general accounting unit. Modifying an opportunity amount of a percent based allocation will modify the allocation amount.</description>
    <inlineHelpText>Percent of opportunity amount to allocate to this general accounting unit. Modifying an opportunity amount of a percent based allocation will modify the allocation amount.</inlineHelpText>
    <label>Percent</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>