force-app/main/default/objects/Future_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Future_Allocation_Set__c</columns>
    <columns>General_Accounting_Unit__c</columns>
    <columns>Amount__c</columns>
    <columns>Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>